--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         fabyan egy praztya
                     </p>
                     <p class="text-sm text-gray-800 truncate">
-                        mamet alhamdulilah allahuakbar
+                        hari pancasila hari kebanggaan kita!
                     </p>
                 </div>
                 <div class="inline-flex items-center text-base font-semibold text-gray-900">
